Fix recipe-flux on mobile size.

--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -105,7 +105,7 @@ ul {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  max-width: 50%;
+  max-width: 80%;
 }
 @media screen and (min-width: 855px) {
   .recipe-flux {
@@ -566,6 +566,7 @@ ul {
 }
 .recipe-page__description {
   margin-top: 1.5rem;
+  text-align: center;
 }
 
 .filtered-recipes {
