--- a/assets/styles/sass/base/_flux.sass
+++ b/assets/styles/sass/base/_flux.sass
@@ -36,7 +36,7 @@
     width: 100%
     margin-left: auto
     margin-right: auto
-    max-width: 50%
+    max-width: 80%
     +utils.responsive(tablet)
         max-width: 90%
         +utils.responsive(laptop)
