--- a/assets/styles/sass/components/recipes-page/_recipes-page.sass
+++ b/assets/styles/sass/components/recipes-page/_recipes-page.sass
@@ -10,3 +10,4 @@
     &__description
         @extend %text-1
         margin-top: 1.5rem
+        text-align: center
